; ModuleID = '/home/carl/AnghaBench/esp-idf/components/soc/esp32s2beta/extr_rtc_time.c_rtc_deep_slp_time_get.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/soc/esp32s2beta/extr_rtc_time.c_rtc_deep_slp_time_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RTC_CNTL_TIME_LOW1_REG = common dso_local global i32 0, align 4
@RTC_CNTL_TIME_HIGH1_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rtc_deep_slp_time_get() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @RTC_CNTL_TIME_LOW1_REG, align 4
  %4 = call i32 @READ_PERI_REG(i32 %3)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* @RTC_CNTL_TIME_HIGH1_REG, align 4
  %6 = call i32 @READ_PERI_REG(i32 %5)
  %7 = shl i32 %6, 32
  %8 = load i32, i32* %1, align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* %1, align 4
  %10 = call i32 (...) @rtc_time_get()
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* %1, align 4
  %13 = sub nsw i32 %11, %12
  ret i32 %13
}

declare dso_local i32 @READ_PERI_REG(i32) #1

declare dso_local i32 @rtc_time_get(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
